# squaternion

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
.github/workflows/: cpp.yaml  python.yaml
c/: CMakeLists.txt  format-code.sh  readme.md
c/examples/: CMakeLists.txt  example.c
c/scruffy/: CMakeLists.txt  test.c
c/src/: algorithms.c  algorithms.h  quaternion.c  squaternion.h
cpp/: CMakeLists.txt  format-code.sh  keywords.txt  library.properties  readme.md
cpp/arduino/test/: test.ino
cpp/examples/: CMakeLists.txt  serial_help.hpp  simple.cpp
cpp/examples/sensor/: msgs.hpp  sensor.cpp
cpp/gtests/: CMakeLists.txt  main-gtest.cpp
cpp/src/: quaternion.hpp  quaternion_filters.hpp  squaternion.hpp
docs/jupyter/: Rotations-Euler-Quaternions.ipynb  Rotations-Euler.ipynb  Rotations-Quaternions.ipynb
python/: pyproject.toml  readme.md
python/squaternion/: squaternion.py
python/tests/: test_sq.py
squaternion/: __init__.py  squaternion.py
tests/: test.py  test_sq.py
